--- a/web/frontend/src/index.css
+++ b/web/frontend/src/index.css
@@ -38,20 +38,17 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  color: #ebdbb2;
-  cursor: pointer;
-  transition: border-color 0.25s;
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(4px);
+    color: #ebdbb2;
+    border: 1px solid rgba(255, 255, 255, 0.4);
 }
+
 button:hover {
-  border-color: #646cff;
+    background: rgba(255, 255, 255, 0.4);
+    border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
